--- a/src/govuk/components/warning-text/warning-text.yaml
+++ b/src/govuk/components/warning-text/warning-text.yaml
@@ -25,3 +25,7 @@ examples:
     data:
       text: You can be fined up to £5,000 if you don’t register.
       iconFallbackText: Warning
+  - name: multiple lines
+    data:
+      text: "If you are not covered by this License), You must: (a) comply with the terms stated above for the purpose of this license. It explains, for example, the production of a Source form, including but not limited to, the implied warranties or conditions of this License, without any additional file created by such Respondent to you under Sections 2.1 and 2.2 above. Larger Works. You may choose to distribute such a notice and a brief idea of what it does."
+      iconFallbackText: Warning
