Ensure IDEs can find custom sass-lint.yml path

--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "ie 8-11",
     "iOS >= 9"
   ],
+  "sasslintConfig": "config/.sass-lint.yml",
   "standard": {
     "globals": [
       "page",
