Apply all non-breaking npm updates
Pinning `postcss-pseudo-classes@0.2.0` due to “Expected closing parenthesis” blacklist config issue

--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "test:build:dist": "jest tasks/gulp/__tests__/after-build-dist.test.js"
   },
   "devDependencies": {
-    "acorn": "^6.1.1",
-    "autoprefixer": "^9.5.1",
+    "acorn": "^7.1.0",
+    "autoprefixer": "^9.7.2",
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "^1.4.4",
     "cssnano": "^4.1.10",
     "del": "^5.0.0",
-    "eslint": "^6.1.0",
+    "eslint": "^6.7.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
     "front-matter": "^3.0.2",
@@ -44,7 +44,7 @@
     "gulp-debug": "^4.0.0",
     "gulp-eol": "^0.2.0",
     "gulp-filter": "^6.0.0",
-    "gulp-if": "^2.0.2",
+    "gulp-if": "^3.0.0",
     "gulp-nunjucks": "^5.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
@@ -58,17 +58,17 @@
     "jest": "^24.8.0",
     "jest-axe": "^3.2.0",
     "jest-puppeteer": "^4.3.0",
-    "jest-serializer-html": "^6.0.0",
+    "jest-serializer-html": "^7.0.0",
     "jquery": "1.12.4",
     "js-yaml": "^3.13.1",
     "map-stream": "0.0.7",
     "marked": "^0.7.0",
     "merge-stream": "^2.0.0",
     "node-sass": "^4.13.0",
-    "nodemon": "^1.18.11",
+    "nodemon": "^2.0.1",
     "oldie": "^1.3.0",
     "outdent": "^0.7.0",
-    "postcss-pseudo-classes": "^0.2.0",
+    "postcss-pseudo-classes": "0.2.0",
     "postcss-scss": "^2.0.0",
     "puppeteer": "^1.14.0",
     "recursive-readdir": "^2.2.2",
@@ -77,8 +77,8 @@
     "sassdoc": "^2.7.0",
     "shuffle-seed": "^1.1.6",
     "standard": "^13.1.0",
-    "vinyl-paths": "^2.1.0",
-    "yargs": "^13.2.2"
+    "vinyl-paths": "^3.0.1",
+    "yargs": "^15.0.2"
   },
   "optionalDependencies": {
     "fsevents": "*"
