--- a/src/govuk/components/character-count/character-count.yaml
+++ b/src/govuk/components/character-count/character-count.yaml
@@ -59,11 +59,15 @@ params:
   type: object
   required: false
   description: HTML attributes (for example data attributes) to add to the textarea.
-- name: countMessageClasses
-  type: string
+- name: countMessage
+  type: object
   required: false
-  description: Classes to add to the count message.
-
+  description: Options for the count message
+  params:
+  - name: classes
+    type: string
+    required: false
+    description: Classes to add to the count message
 
 examples:
   - name: default
