Fix documentation so that id option in date input is required
I think this should ideally be called `idPrefix` instead of `id` but as that would be a breaking change we should consider this in another change.

--- a/src/govuk/components/date-input/date-input.yaml
+++ b/src/govuk/components/date-input/date-input.yaml
@@ -1,7 +1,7 @@
 params:
 - name: id
   type: string
-  required: false
+  required: true
   description: This is used for the main component and to compose id attribute for each item.
 - name: namePrefix
   type: string
