--- a/src/govuk/components/skip-link/skip-link.yaml
+++ b/src/govuk/components/skip-link/skip-link.yaml
@@ -9,8 +9,8 @@ params:
   description: If `text` is set, this is not required. HTML to use within the skip link component. If `html` is provided, the `text` argument will be ignored.
 - name: href
   type: string
-  required: true
-  description: The value of the skip link href attribute. Defaults to #content
+  required: false
+  description: The value of the skip link href attribute. Defaults to `#content` if not provided.
 - name: classes
   type: string
   required: false
