--- a/src/govuk/components/skip-link/skip-link.yaml
+++ b/src/govuk/components/skip-link/skip-link.yaml
@@ -10,7 +10,7 @@ params:
 - name: href
   type: string
   required: false
-  description: The value of the skip link's `href` attribute. Defaults to `#content` if you do not provide a value.
+  description: The value of the skip link’s `href` attribute. Defaults to `#content` if you do not provide a value.
 - name: classes
   type: string
   required: false
