--- a/src/govuk/components/date-input/date-input.yaml
+++ b/src/govuk/components/date-input/date-input.yaml
@@ -52,7 +52,7 @@ params:
 - name: errorMessage
   type: object
   required: false
-  description: Options for the error message.
+  description: Options for the error message component. The error message component will not display if you use a falsy value for `errorMessage`, for example `false` or `null`.
   isComponent: true
 - name: formGroup
   type: object
