--- a/src/govuk/components/breadcrumbs/breadcrumbs.yaml
+++ b/src/govuk/components/breadcrumbs/breadcrumbs.yaml
@@ -23,6 +23,10 @@ params:
   type: string
   required: false
   description: Classes to add to the breadcrumbs container.
+- name: collapseOnMobile
+  type: boolean
+  required: false
+  description: When true, the breadcrumbs will collapse to the first and last item only on tablet breakpoint and below.
 - name: attributes
   type: object
   required: false
@@ -79,3 +83,17 @@ examples:
         href: '/browse/abroad'
       -
         text: Travel abroad
+- name: with collapse on mobile
+  data:
+    collapseOnMobile: true
+    items:
+      -
+        text: Home
+        href: '/'
+      -
+        text: Education, training and skills
+        href: '/education'
+      -
+        text: Special educational needs and disability (SEND) and high needs
+        href: '/education/special-educational-needs-and-disability-send-and-high-needs'
+
