Remove sassdocs from the core repository
This will be available at alphagov/govuk-frontend-docs.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preinstall": "node bin/check-nvmrc.js",
     "prestart": "node bin/check-nvmrc.js",
     "start": "gulp dev",
-    "heroku": "gulp copy-assets && gulp sassdoc && node app/start.js",
+    "heroku": "gulp copy-assets && node app/start.js",
     "pre-release": "node bin/check-nvmrc.js && ./bin/pre-release.sh",
     "release": "node bin/check-nvmrc.js && ./bin/release.sh",
     "release-to-branch": "node bin/check-nvmrc.js && ./bin/release-to-branch.sh",
@@ -74,7 +74,6 @@
     "recursive-readdir": "^2.2.2",
     "request": "^2.88.0",
     "sass-color-helpers": "^2.1.1",
-    "sassdoc": "^2.7.0",
     "shuffle-seed": "^1.1.6",
     "standard": "^13.1.0",
     "vinyl-paths": "^3.0.1",
