--- a/package/package.json
+++ b/package/package.json
@@ -18,7 +18,7 @@
   "bugs": {
     "url": "https://github.com/alphagov/govuk-frontend/issues"
   },
-  "homepage": "https://github.com/alphagov/govuk-frontend#readme",
+  "homepage": "https://frontend.design-system.service.gov.uk/",
   "keywords": [
     "govuk",
     "frontend",
