--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "nodemon": "^2.0.3",
     "oldie": "^1.3.0",
     "outdent": "^0.7.1",
-    "postcss-pseudo-classes": "0.2.0",
+    "postcss-pseudo-classes": "^0.2.1",
     "postcss-scss": "^2.0.0",
     "puppeteer": "^2.1.1",
     "recursive-readdir": "^2.2.2",
