Add serviceUrl to latest header example which includes serviceName
When serviceName is used in the header, it should be in conjunction with serviceUrl, otherwise it renders a link with an empty href.

--- a/src/govuk/components/header/header.yaml
+++ b/src/govuk/components/header/header.yaml
@@ -187,6 +187,7 @@ examples:
 - name: navigation item with html
   data:
     serviceName: Service Name
+    serviceUrl: '/components/header'
     navigation:
       - href: '#1'
         html: <em>Navigation item 1</em>
