Add default value of / for Header component's serviceUrl param
Prior to this if you passed serviceName to the Header component but omitted serviceUrl, it would be rendered with an empty href.

--- a/src/govuk/components/header/header.yaml
+++ b/src/govuk/components/header/header.yaml
@@ -18,7 +18,7 @@ params:
 - name: serviceUrl
   type: string
   required: false
-  description: Url for the service name anchor.
+  description: Url for the service name anchor. Defaults to / but is only rendered if serviceName is also present
 - name: navigation
   type: array
   required: false
