--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "standard": "^14.3.4",
     "stylelint": "^13.7.1",
     "stylelint-config-gds": "^0.1.0",
+    "stylelint-order": "^4.1.0",
     "vinyl-paths": "^3.0.1",
     "yargs": "^15.4.1"
   },
