Add missing spellcheck param to character count
We added a new spellcheck param to the textarea component in https://github.com/alphagov/govuk-frontend/pull/1859

However, we forgot to add the param to the character count component, which meant it couldn't be passed through to the textarea. This adds the missing param.

--- a/src/govuk/components/character-count/character-count.yaml
+++ b/src/govuk/components/character-count/character-count.yaml
@@ -59,6 +59,10 @@ params:
   type: object
   required: false
   description: HTML attributes (for example data attributes) to add to the textarea.
+- name: spellcheck
+  type: boolean
+  required: false
+  description: Optional field to enable or disable the spellcheck attribute on the character count.
 - name: countMessage
   type: object
   required: false
