--- a/src/govuk/components/textarea/textarea.yaml
+++ b/src/govuk/components/textarea/textarea.yaml
@@ -139,3 +139,47 @@ examples:
       id: textarea-with-spellcheck-disabled
       name: spellcheck
       spellcheck: false
+
+# Hidden examples are not shown in the review app, but are used for tests and HTML fixtures
+  - name: classes
+    hidden: true
+    data:
+      classes: app-textarea--custom-modifier
+  - name: attributes
+    hidden: true
+    data:
+      attributes:
+        data-attribute: my data value
+  - name: with describedBy
+    hidden: true
+    data:
+      describedBy: some-id
+  - name: with hint and described by
+    hidden: true
+    data:
+      describedBy: some-id
+      hint:
+        text: It’s on your National Insurance card, benefit letter, payslip or P60. For example, ‘QQ 12 34 56 C’.
+  - name: with error message and described by
+    hidden: true
+    data:
+      describedBy: some-id
+      id: textarea-with-error
+      errorMessage:
+        text: Error message
+  - name: with hint and error message
+    hidden: true
+    data:
+      errorMessage:
+        text: Error message
+      hint:
+        text: Hint
+  - name: with hint, error message and described by
+    hidden: true
+    data:
+      describedBy: some-id
+      errorMessage:
+        text: Error message
+      hint:
+        text: Hint
+
