Split prefix/suffix onto own line on narrow screens
Implement design from https://github.com/alphagov/govuk-frontend/issues/1915#issuecomment-677705663

This ensures that especially on zooming in the input remains visible.

Remove height restriction to ensure that longer prefix/suffix can wrap
instead of overflowing container.

Add an example to demonstrate text wrapping behaviour.

--- a/src/govuk/components/input/input.yaml
+++ b/src/govuk/components/input/input.yaml
@@ -362,6 +362,17 @@ examples:
         text: £
       suffix:
         text: per item
+  - name: with prefix and long suffix
+    data:
+      label:
+        text: Cost per item, in pounds, per household member
+      id: input-with-prefix-suffix
+      name: cost
+      classes: govuk-input--width-10
+      prefix:
+        text: £
+      suffix:
+        text: per household member
   - name: with prefix and suffix and error
     data:
       label:
