Mark character count threshold as not required
The character count threshold triggers the count message to be hidden by default. If not set, the count message is visible all the time.
Therefore, mark the count threshold as not required.

--- a/src/govuk/components/character-count/character-count.yaml
+++ b/src/govuk/components/character-count/character-count.yaml
@@ -25,7 +25,7 @@ params:
   description: If `maxlength` is set, this is not required. The maximum number of words. If `maxwords` is provided, the `maxlength` argument will be ignored.
 - name: threshold
   type: string
-  required: true
+  required: false
   description: The percentage value of the limit at which point the count message is displayed. If this attribute is set, the count message will be hidden by default.
 - name: label
   type: object
