Mark checkbox item.name as not required
If checkbox item.name is not set, then the component global nameis used instead.
Therefore, mark the checkbox item.name as not required.

--- a/src/govuk/components/checkboxes/checkboxes.yaml
+++ b/src/govuk/components/checkboxes/checkboxes.yaml
@@ -54,7 +54,7 @@ params:
     description: Specific id attribute for the checkbox item. If omitted, then idPrefix option will be applied.
   - name: name
     type: string
-    required: true
+    required: false
     description: Specific name for the checkbox item. If omitted, then component global `name` string will be applied.
   - name: value
     type: string
