Clarify idPrefix description
Match the description for the `item.name` option - when ommitted, the global option is applied instead

--- a/src/govuk/components/checkboxes/checkboxes.yaml
+++ b/src/govuk/components/checkboxes/checkboxes.yaml
@@ -51,7 +51,7 @@ params:
   - name: id
     type: string
     required: false
-    description: Specific id attribute for the checkbox item. If omitted, then idPrefix option will be applied.
+    description: Specific id attribute for the checkbox item. If omitted, then component global `idPrefix` option will be applied.
   - name: name
     type: string
     required: false
