Mark date input label as not required
If the date input label is not provided, the name is used instead.
Therefore, mark the label as not required.

--- a/src/govuk/components/date-input/date-input.yaml
+++ b/src/govuk/components/date-input/date-input.yaml
@@ -22,7 +22,7 @@ params:
     description: Item-specific name attribute.
   - name: label
     type: string
-    required: true
+    required: false
     description: Item-specific label text. If provided, this will be used instead of `name` for item label text.
   - name: value
     type: string
