Add missing required attribute to error message option
The visuallyHiddenText option was missing the required option. It has a default value of "Error" so is not required, but let's make that clear and keep things consistent.

--- a/src/govuk/components/error-message/error-message.yaml
+++ b/src/govuk/components/error-message/error-message.yaml
@@ -21,6 +21,7 @@ params:
   description: HTML attributes (for example data attributes) to add to the error message span tag
 - name: visuallyHiddenText
   type: string
+  required: false
   description: A visually hidden prefix used before the error message. Defaults to "Error".
 
 accessibilityCriteria: |
