--- a/src/govuk/components/footer/footer.yaml
+++ b/src/govuk/components/footer/footer.yaml
@@ -6,12 +6,15 @@ params:
   params:
   - name: visuallyHiddenTitle
     type: string
+    required: false
     description: Title for a meta item section, which defaults to Support links
   - name: html
     type: string
+    required: false
     description: HTML to add to the meta section of the footer, which will appear below any links specified using meta.items.
   - name: text
     type: string
+    required: false
     description: Text to add to the meta section of the footer, which will appear below any links specified using meta.items. If meta.html is specified, this option is ignored.
   - name: items
     type: array
