Mark footer navigation.title as required
The footer navigation title does not have a default.

If navigation is provided, but the title attribute is missed, you end up with an empty heading tag.
Therefore, mark the title as required.

--- a/src/govuk/components/footer/footer.yaml
+++ b/src/govuk/components/footer/footer.yaml
@@ -40,7 +40,7 @@ params:
   params:
   - name: title
     type: string
-    required: false
+    required: true
     description: Title for a section
   - name: columns
     type: integer
