Make use of `idPrefix` instead of `id` clearer
Make it clearer that if items.id is not set, then `idPrefix` is required instead.

--- a/src/govuk/components/tabs/tabs.yaml
+++ b/src/govuk/components/tabs/tabs.yaml
@@ -19,7 +19,7 @@ params:
   - name: id
     type: string
     required: true
-    description: Specific id attribute for the tab item. If omitted, then `idPrefix` string will be applied.
+    description: Specific id attribute for the tab item. If omitted, then `idPrefix` string is required instead.
   - name: label
     type: string
     required: true
