--- a/src/govuk/components/header/header.yaml
+++ b/src/govuk/components/header/header.yaml
@@ -26,11 +26,11 @@ params:
   params:
   - name: text
     type: string
-    required: false
+    required: true
     description: Text for the navigation item. If `html` is provided, the `text` argument will be ignored.
   - name: html
     type: string
-    required: false
+    required: true
     description: HTML for the navigation item. If `html` is provided, the `text` argument will be ignored.
   - name: href
     type: string
