Mark navigation.text and navigation.href as required
Both `text` and `href` attributes need to be present to create a link.

A navigation item with no href or text does not render - you end up with an empty <ul> element. We also instruct users that a navigation.title is required, so you also end up with a heading with an empty list underneath.

Therefore, mark navigation.items.text and navigation.items.href as required

--- a/src/govuk/components/footer/footer.yaml
+++ b/src/govuk/components/footer/footer.yaml
@@ -53,11 +53,11 @@ params:
     params:
     - name: text
       type: string
-      required: false
+      required: true
       description: List item text in the navigation section of the footer.
     - name: href
       type: string
-      required: false
+      required: true
       description: List item href attribute in the navigation section of the footer. Both `text` and `href` attributes need to be present to create a link.
     - name: attributes
       type: object
