Move phase banner inside header to resolve aXe lanmark issue
Non breaking implementation so low impact on existing users.
See https://github.com/alphagov/govuk-frontend/issues/1604 for details

--- a/src/govuk/components/header/header.yaml
+++ b/src/govuk/components/header/header.yaml
@@ -101,6 +101,16 @@ examples:
     serviceName: Service Name
     serviceUrl: '/components/header'
 
+- name: with service name and phase banner
+  description: If your service is in alpha or beta and you wish to display a banner.
+  data:
+    serviceName: Service Name
+    serviceUrl: '/components/header'
+    phaseBanner:
+      tag:
+        text: alpha
+      html: This is a new service - your <a href="#" class="govuk-link">feedback</a> will help us to improve it.
+
 - name: with navigation
   data:
     navigation:
